sidebar-dashboard/style.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  box-sizing: border-box;
}

header {
  position: fixed;
  background-color: #22242A;
  padding: 20px;
  width: 100%;
  height: 30px;
}

.left_area h3 {
  color: #fff;
  margin: 0;
  text-transform: uppercase;
  font-size: 22px;
  font-weight: 900;
}

.left_area span {
  color: #1dc4e7;
}

.logout_btn {
  padding: 5px;
  background: #19B3D3;
  text-decoration: none;
  float: right;
  margin-top: -30px;
  margin-right: 40px;
  border-radius: 2px;
  font-size: 15px;
  font-weight: 600;
  color: #fff;
  transition: .5s;
  transition-property: background;
}

.logout_btn:hover {
  background: #0B87A6;
}

/* sidebar */
.sidebar {
  background: #2f323a;
  margin-top: 70px;
  padding-top: 30px;
  position: fixed;
  left: 0;
  width: 250px;
  height: 100%;
  transition: .5s;
  transition-property: left;
}

.sidebar .profile_image {
  width: 100px;
  height: 100px;
  border-radius: 100px;
  margin-bottom: 10px;
}

.sidebar h4 {
  color: #ccc;
  margin-top: 0;
  margin-bottom: 20px;
}

.sidebar a {
  color: #fff;
  display: block;
  width: 100%;
  line-height: 60px;
  text-decoration: none;
  padding-left: 40px;
  transition: .5s;
  transition-property: background;
}

.sidebar a:hover {
  background: #19b3d3;
}

.sidebar i {
  padding-right: 10px;
}

label #sidebar_btn {
  z-index: 1;
  color: #fff;
  position: fixed;
  cursor: pointer;
  left: 300px;
  font-size: 20px;
  margin: 5px 0;
  transition: .5s;
  transition-property: background;
}

label #sidebar_btn:hover {
  color: #19b3d3;
}

#check:checked~.sidebar {
  left: -190px;
}

#check:checked~.sidebar a span {
  display: none;
}

#check:checked~.sidebar a {
  font-size: 20px;
  margin-left: 170px;
  width: 80px;
}

.content {
  margin-left: 250px;
  background: url(./img/golden-gate.jpeg) no-repeat;
  background-position: center;
  background-size: cover;
  height: 100vh;
  transition: .5s;
}

#check:checked~.content {
  margin-left: 60px;
}

#check {
  display: none;
}

